--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                     <span class="terminal-symbol"></span>
                     <span class="typed-intro"></span>
                 </div>
-                <p class="subtext">"Coder des idées, diffuser des valeurs, innover par le digital."</p>
+                
             </div>
        
         <p class="intro-message animate__animated animate__fadeInDown">
@@ -525,11 +525,11 @@
         </div>
 
         <div class="share">
-            <a href="https://www.linkedin.com/in/sayadali-madarbukus-8003452b0/" class="fab fa-linkedin"></a>
-            <a href="https://github.com/Sayad77" class="fab fa-github"></a>
-            <a href="https://x.com/sainedecrime" class="fab fa-twitter"></a>
-            <a href="https://www.instagram.com/lenversdudecor77/" class="fab fa-instagram"></a>
-            <a href="https://www.facebook.com/profile.php?id=100017041081745&locale=fr_FR" class="fab fa-facebook-f"></a>
+            <a href="https://www.linkedin.com/in/sayadali madarbukus" class="fab fa-linkedin-in" target="_blank" rel="noopener noreferrer"></a>
+            <a href="https://github.com/Sayad77" class="fab fa-github" target="_blank" rel="noopener noreferrer"></a>
+           <a href="https://twitter.com/lenversdududecor" class="fab fa-twitter" target="_blank" rel="noopener noreferrer"></a>
+            <a href="https://www.instagram.com/lenversdudecor77/" class="fab fa-instagram" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://www.facebook.com/mercistephen" class="fab fa-facebook-f" target="_blank" rel="noopener noreferrer"></a>
         </div>
 
     </section>
